--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,24 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport"
+      content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="stylesheet"
+      href="https://unpkg.com/tailwindcss@2.2.4/dist/tailwind.css">
+    <title>
+      <%= htmlWebpackPlugin.options.title %>
+    </title>
   </head>
-  <body>
+  
+  <body class="bg-gray-50 text-gray-800">
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but <%=
+          htmlWebpackPlugin.options.title %> doesn't work
+          properly without JavaScript enabled. Please enable
+          it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app" class="p-8 w-3/4 mx-auto"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
